--- a/atMedia.info.html
+++ b/atMedia.info.html
@@ -816,7 +816,11 @@ function trackMouseMove(event,element) {
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
      SECTION 108(a)(3)).
 -->
-<div id="fb-root" class=" fb_reset">
+
+<!--
+#################
+
+A a bunch of stuff that looks like Facebook junk
   <script src="./atMedia.info_files/all.js" async=""></script>
   <div style="position: absolute; top: -10000px; height: 0px; width: 0px;">
     <div>
@@ -833,5 +837,9 @@ function trackMouseMove(event,element) {
 <script id="hiddenlpsubmitdiv" style="display: none;"></script>
 <script>try{for(var lastpass_iter=0; lastpass_iter < document.forms.length; lastpass_iter++){ var lastpass_f = document.forms[lastpass_iter]; if(typeof(lastpass_f.lpsubmitorig2)=="undefined"){ lastpass_f.lpsubmitorig2 = lastpass_f.submit; lastpass_f.submit = function(){ var form=this; var customEvent = document.createEvent("Event"); customEvent.initEvent("lpCustomEvent", true, true); var d = document.getElementById("hiddenlpsubmitdiv"); if (d) {for(var i = 0; i < document.forms.length; i++){ if(document.forms[i]==form){ d.innerText=i; } } d.dispatchEvent(customEvent); }form.lpsubmitorig2(); } } }}catch(e){}</script>
 <iframe name="oauth2relay848344060" id="oauth2relay848344060" src="./atMedia.info_files/postmessageRelay.htm" tabindex="-1" style="width: 1px; height: 1px; position: absolute; top: -100px;"></iframe>
+
+############
+
+-->
 </body>
 </html>
