new blank style.css to move local styles to external

--- a/atMedia.info.html
+++ b/atMedia.info.html
@@ -351,6 +351,10 @@
 	<link href="./atMedia.info_files/css" rel="stylesheet" type="text/css">
 
 
+<!--   #####   Moved from local style to stylesheet  -->
+ <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
+ <!---    ##############    -->
+
 	<style type="text/css">
 	body {
 		background: #eee;
